test/compiler_errors/redfine-builtin.lzx

<canvas layout="spacing:10">
   <class name="text"/>

   <edittext>
       <method event="onkeyup">
           Debug.write('keyup');
       </method>
   </edittext>

</canvas>
<!-- * X_LZ_COPYRIGHT_BEGIN ***************************************************
* Copyright 2001-2007 Laszlo Systems, Inc.  All Rights Reserved.              *
* Use is subject to license terms.                                            *
* X_LZ_COPYRIGHT_END ****************************************************** -->
